--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: '404' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <section class="not-found">
