--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -13,7 +13,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'about-us' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <% if(aboutUsText) { %>
