--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -98,19 +98,19 @@
   <div class="section-2">
     <div class="navbar">
       <nav>
-        <a href="/">
+        <a class="special <%= page == 'index' ? 'on' : '' %>" href="/">
           <img src="/assets/icons/house.svg" alt="" />
           <span>خانه</span>
         </a>
-        <a href="/products">
+        <a class="special <%= page == 'products' ? 'on' : '' %>" href="/products">
           <img src="/assets/icons/product.svg" alt="" />
           <span>محصولات</span>
         </a>
-        <a href="/support">
+        <a class="special <%= page == 'support' ? 'on' : '' %>" href="/support">
           <img src="/assets/icons/support.svg" alt="" />
           <span>پشتیبانی</span>
         </a>
-        <a href="/about-us">
+        <a class="special <%= page == 'about-us' ? 'on' : '' %>" href="/about-us">
           <img src="/assets/icons/about-us.svg" alt="" />
           <span>درباره ما</span>
         </a>
