--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -13,7 +13,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'search-results' }) %>
       <main>
         <section class="search-results">
           <h1>
