--- a/views/support.ejs
+++ b/views/support.ejs
@@ -13,7 +13,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'support' }) %>
       <main>
         <section class="support-section">
           <h1>پشتیبانی</h1>
