--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -13,7 +13,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'cart' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <section class="cart-section">
