--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -13,7 +13,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'favorites' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <section class="favorites-list">
