--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'index' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <% if(advertiseCards) { %>
