--- a/views/product.ejs
+++ b/views/product.ejs
@@ -66,7 +66,7 @@
       <button class="close-image-btn">بستن</button>
     </div>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'product' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <section class="product-section">
