--- a/views/products.ejs
+++ b/views/products.ejs
@@ -14,7 +14,7 @@
     <div class="overlay hidden"></div>
     <%- include("includes/drawer") %>
     <div class="main">
-      <%- include("includes/header") %>
+      <%- include("includes/header", { page: 'products' }) %>
       <div class="header-overlay hidden"></div>
       <main>
         <section class="products-section">
