--- a/views/404.ejs
+++ b/views/404.ejs
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer") %>
+    <%- include("includes/drawer", { page: '404' }) %>
     <div class="main">
       <%- include("includes/header", { page: '404' }) %>
       <div class="header-overlay hidden"></div>
