--- a/views/product.ejs
+++ b/views/product.ejs
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer") %>
+    <%- include("includes/drawer", { page: 'product' }) %>
     <div class="submit-comment-box">
       <div class="box">
         <div class="header">
