--- a/views/products.ejs
+++ b/views/products.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer") %>
+    <%- include("includes/drawer", { page: 'products' }) %>
     <div class="main">
       <%- include("includes/header", { page: 'products' }) %>
       <div class="header-overlay hidden"></div>
