--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -34,6 +34,10 @@ $gray-color: #62666d;
   filter: brightness(0) saturate(100%) invert(40%) sepia(10%) saturate(329%) hue-rotate(180deg) brightness(92%) contrast(83%);
 }
 
+@mixin whiteColorFilter {
+  filter: brightness(0) saturate(100%) invert(100%) sepia(4%) saturate(0%) hue-rotate(283deg) brightness(107%) contrast(103%);
+}
+
 @font-face {
   font-family: Vazir;
   src: url(/fonts/Vazir.ttf);
@@ -155,7 +159,7 @@ a:hover::after {
   .section-1 {
     display: flex;
     justify-content: space-evenly;
-    border-bottom: 2px solid var(--primary-color);
+    border-bottom: 1px solid var(--border-color);
     padding: 15px 0;
     .close-div {
       #close-btn {
@@ -164,6 +168,7 @@ a:hover::after {
         outline: none;
         cursor: pointer;
         img {
+          @include grayColorFilter();
           width: 50px;
         }
       }
@@ -186,22 +191,26 @@ a:hover::after {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      border-bottom: 2px solid var(--primary-color);
-      font-size: 1.5em;
+      border-bottom: 1px solid var(--border-color);
+      font-size: 1.1em;
+      a {
+        color: var(--primary-color);
+      }
     }
     .user-data {
       display: flex;
       justify-content: space-around;
-      border-bottom: 2px solid var(--primary-color);
+      border-bottom: 1px solid var(--border-color);
       .name {
         display: flex;
         align-items: center;
         padding: 10px;
         img {
+          @include secondaryColorFilter();
           width: 30px;
         }
         span {
-          color: var(--primary-color);
+          color: var(--gray-color);
           font-size: 1.5em;
         }
       }
@@ -212,20 +221,19 @@ a:hover::after {
         border: none;
         padding: 10px;
         img {
+          filter: brightness(0) saturate(100%) invert(22%) sepia(37%) saturate(7123%) hue-rotate(0deg) brightness(105%) contrast(108%);              width: 25px;
           width: 25px;
         }
         span {
-          color: var(--errors-alerts-color);
+          color: #ff2500;
           font-size: 1.5em;
         }
       }
     }
     .action-links {
-      border-bottom: 2px solid var(--secondary-color);
+      border-bottom: 1px solid var(--border-color);
       display: flex;
       flex-direction: column;
-      font-size: 1.5em;
-      padding: 10px 2%;
       a {
         display: flex;
         justify-content: right;
@@ -233,28 +241,49 @@ a:hover::after {
         gap: 5px;
         padding: 5px;
         span {
-          padding: 5px;
+          color: var(--gray-color);
+          padding: 0 5px;
         }
         img {
-          filter: invert(64%) sepia(59%) saturate(1175%) hue-rotate(345deg)
-            brightness(100%) contrast(103%);
+          @include grayColorFilter();
           width: 25px;
+        }
+      }
+      a.on {
+        background-color: var(--secondary-color);
+        img {
+          @include whiteColorFilter();
+        }
+        span {
+          color: white;
         }
       }
     }
     .navbar {
       display: flex;
       flex-direction: column;
-      padding: 10px 2%;
       a {
         display: flex;
         justify-content: right;
         align-items: center;
-        font-size: 1.5em;
         gap: 5px;
         padding: 5px;
         img {
+          @include grayColorFilter();
           width: 25px;
+        }
+        span {
+          color: var(--gray-color);
+          padding: 0 5px;
+        }
+      }
+      a.on {
+        background-color: var(--secondary-color);
+        img {
+          @include whiteColorFilter();
+        }
+        span {
+          color: white;
         }
       }
     }
@@ -661,7 +690,7 @@ footer {
 
 @media screen and (max-width: 640px) {
   body {
-    font-size: 12px;
+    font-size: 14px;
     .main {
       header > {
         .section-1 {
