--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer") %>
+    <%- include("includes/drawer", { page: 'about-us' }) %>
     <div class="main">
       <%- include("includes/header", { page: 'about-us' }) %>
       <div class="header-overlay hidden"></div>
