--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer") %>
+    <%- include("includes/drawer", { page: 'index' }) %>
     <div class="main">
       <%- include("includes/header", { page: 'index' }) %>
       <div class="header-overlay hidden"></div>
