--- a/views/support.ejs
+++ b/views/support.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="overlay hidden"></div>
-    <%- include("includes/drawer") %>
+    <%- include("includes/drawer", { page: 'support' }) %>
     <div class="main">
       <%- include("includes/header", { page: 'support' }) %>
       <main>
