--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -554,7 +554,7 @@ header > {
 footer {
   display: grid;
   grid-template-columns: 7.5fr 2.5fr;
-  border-top: 2px solid var(--primary-color);
+  border-top: 1px solid var(--border-color);
   padding: 15px 5%;
   .side-right {
     .brand {
