--- a/public/styles/cart.scss
+++ b/public/styles/cart.scss
@@ -1,119 +1,119 @@
 $border-color: rgba(0, 0, 0, 0.14);
 
 .main {
-    main {
-        .cart-section {
-            display: grid;
-            grid-template-columns: 7fr 3fr;
-            padding: 15px 5%;
-            .products-list {
-                padding: 5px;
-                h3 {
-                    color: var(--primary-color);
-                    font-size: 1.5em;
+  main {
+    .cart-section {
+      display: grid;
+      grid-template-columns: 7fr 3fr;
+      padding: 15px 5%;
+      .products-list {
+        padding: 5px;
+        h3 {
+          color: var(--secondary-color);
+          font-size: 1.5em;
+        }
+        .products {
+          .product {
+            width: 100%;
+            a {
+              display: flex;
+              justify-content: right;
+              align-items: center;
+              border-bottom: 1px solid var(--border-color);
+              color: rgb(54, 54, 54);
+              gap: 15px;
+              .image {
+                img {
+                  width: 120px;
                 }
-                .products {
-                    .product {
-                        width: 100%;
-                        a {
-                            display: flex;
-                            justify-content: right;
-                            align-items: center;
-                            border-bottom: 1px solid $border-color;
-                            color: rgb(54, 54, 54);
-                            gap: 15px;
-                            .image {
-                                img {
-                                    width: 120px;
-                                }
-                            }
-                            .detail {
-                                display: flex;
-                                flex-direction: column;
-                                width: 100%;
-                                h5 {
-                                    padding: 5px;
-                                }
-                                .rate {
-                                    border: 1px solid $border-color;
-                                    border-radius: 15px;
-                                    display: flex;
-                                    justify-content: space-between;
-                                    justify-self: left;
-                                    padding: 5px 10px;
-                                    align-items: center;
-                                    width: fit-content;
-                                    img {
-                                        width: 25px;
-                                    }
-                                }
-                                .delete-product {
-                                    background-color: transparent;
-                                    border: 1px solid $border-color;
-                                    border-radius: 11px;
-                                    margin-right: auto;
-                                    padding: 5px;
-                                    width: fit-content;
-                                    cursor: pointer;
-                                    img {
-                                        width: 25px;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-            .order-details {
+              }
+              .detail {
                 display: flex;
                 flex-direction: column;
-                border: 1px solid $border-color;
-                border-radius: 11px;
-                height: fit-content;
-                padding: 0 15px;
+                width: 100%;
                 h5 {
-                    border-bottom: 1px solid $border-color;
-                    color: var(--primary-color);
-                    font-size: 1.5em;
-                    padding: 10px 15px;
+                  padding: 5px;
                 }
-                .sum-of-all {
-                    padding: 10px;
+                .rate {
+                  border: 1px solid var(--border-color);
+                  border-radius: 15px;
+                  display: flex;
+                  justify-content: space-between;
+                  justify-self: left;
+                  padding: 5px 10px;
+                  align-items: center;
+                  width: fit-content;
+                  img {
+                    width: 25px;
+                  }
                 }
-                .payable {
-                    border-bottom: 1px solid $border-color;
-                    padding: 10px;
+                .delete-product {
+                  background-color: transparent;
+                  border: 1px solid var(--border-color);
+                  border-radius: 11px;
+                  margin-right: auto;
+                  padding: 5px;
+                  width: fit-content;
+                  cursor: pointer;
+                  img {
+                    width: 25px;
+                  }
                 }
-                .place-order-btn {
-                    border: none;
-                    border-radius: 10px;
-                    background-color: var(--primary-color);
-                    color: white;
-                    padding: 10px 15px;
-                    margin: 25px 0;
-                    cursor: pointer;
-                }
+              }
             }
+          }
         }
+      }
+      .order-details {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid var(--border-color);
+        border-radius: 11px;
+        height: fit-content;
+        padding: 0 15px;
+        h5 {
+          border-bottom: 1px solid var(--border-color);
+          color: var(--secondary-color);
+          font-size: 1.5em;
+          padding: 10px 15px;
+        }
+        .sum-of-all {
+          padding: 10px;
+        }
+        .payable {
+          border-bottom: 1px solid var(--border-color);
+          padding: 10px;
+        }
+        .place-order-btn {
+          border: none;
+          border-radius: 10px;
+          background-color: var(--secondary-color);
+          color: white;
+          padding: 10px 15px;
+          margin: 25px 0;
+          cursor: pointer;
+        }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 640px) {
-    .main {
-        main {
-            .cart-section {
-                display: flex;
-                flex-direction: column-reverse;
-                .product a {
-                    display: flex;
-                    flex-direction: column;
-                    .image {
-                        display: flex;
-                        justify-content: right;
-                        width: 100%;
-                    }
-                }
-            }
+  .main {
+    main {
+      .cart-section {
+        display: flex;
+        flex-direction: column-reverse;
+        .product a {
+          display: flex;
+          flex-direction: column;
+          .image {
+            display: flex;
+            justify-content: right;
+            width: 100%;
+          }
         }
+      }
     }
+  }
 }
