--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -33,15 +33,29 @@
 }
 
 body {
+  background-color: var(--bg-color);
   font-size: 16px;
   position: relative;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--primary-text-color);
+}
+
+p {
+  color: var(--secondary-text-color);
 }
 
 a {
   text-decoration: none;
   position: relative;
   padding: 5px;
-  color: var(--primary-color);
+  color: var(--link-color);
 }
 
 a:not(.special)::after {
@@ -51,7 +65,7 @@ a:not(.special)::after {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   transition: width 0.3s ease;
 }
 
@@ -96,19 +110,15 @@ a:hover::after {
 
 .swiper-button-next,
 .swiper-button-prev {
-  filter: brightness(0) saturate(100%) invert(71%) sepia(73%) saturate(2778%) hue-rotate(346deg) brightness(103%) contrast(103%);
-}
-
-.swiper-button-disabled {
-  filter: brightness(0) saturate(100%) invert(72%) sepia(46%) saturate(605%) hue-rotate(342deg) brightness(100%) contrast(98%);
+  filter: brightness(0) saturate(100%) invert(63%) sepia(63%) saturate(5182%) hue-rotate(143deg) brightness(95%) contrast(101%);
 }
 
 .swiper-pagination-bullet {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 .drawer {
-  background-color: white;
+  background-color: var(--bg-color);
   position: fixed;
   top: 0;
   right: 0;
@@ -253,7 +263,7 @@ header {
 }
 
 header > .section-1 {
-  background-color: white;
+  background-color: var(--bg-color);
   display: grid;
   grid-template-columns: 3fr 5fr 2fr;
   padding: 15px 3%;
@@ -292,6 +302,7 @@ header > .section-1 .brand a img {
 }
 
 header > .section-1 .brand a h1 {
+  color: var(--primary-color);
   padding: 0 10px;
 }
 
@@ -312,7 +323,7 @@ header > .section-1 .search .box .search-form {
 }
 
 header > .section-1 .search .box .search-form #search-btn {
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
   border: none;
   border-radius: 12px 0 0 12px;
   height: 45px;
@@ -337,7 +348,7 @@ header > .section-1 .search .box .search-form input {
 
 header > .section-1 .search .box .top-searches {
   pointer-events: none;
-  background-color: white;
+  background-color: var(--bg-color);
   border: 1px solid var(--border-color);
   border-radius: 0 0 10px 10px;
   opacity: 0;
@@ -348,13 +359,12 @@ header > .section-1 .search .box .top-searches {
   top: 100%;
   right: 0;
   z-index: 1001;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 header > .section-1 .search .box .top-searches h6 {
   padding: 5px;
   font-size: 1.1em;
-  color: gray;
 }
 
 header > .section-1 .search .box .top-searches .searches {
@@ -412,6 +422,14 @@ header > .section-1 .user-actions .auth-links {
   align-items: center;
 }
 
+header > .section-1 .user-actions .auth-links a {
+  color: var(--primary-color);
+}
+
+header > .section-1 .user-actions .auth-links a:not(.special)::after {
+  background-color: var(--primary-color);
+}
+
 header > .section-1 .user-actions .user-data {
   position: relative;
   padding: 5px;
@@ -428,7 +446,7 @@ header > .section-1 .user-actions .user-data #open-user-data-box-btn img {
 }
 
 header > .section-1 .user-actions .user-data #open-user-data-box-btn img:nth-child(2) {
-  transition: all .75s;
+  transition: all 0.75s;
 }
 
 header > .section-1 .user-actions .user-data #open-user-data-box-btn.open img:nth-child(2) {
@@ -437,7 +455,7 @@ header > .section-1 .user-actions .user-data #open-user-data-box-btn.open img:nt
 
 header > .section-1 .user-actions .user-data .user-data-box {
   display: none;
-  background-color: white;
+  background-color: var(--bg-color);
   box-shadow: 2px 2px 5px -2px black;
   position: absolute;
   top: 100%;
@@ -487,7 +505,7 @@ header > .section-1 .user-actions .user-data .user-data-box.on {
 }
 
 header > .section-2 {
-  background-color: white;
+  background-color: var(--bg-color);
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid var(--secondary-color);
@@ -543,13 +561,15 @@ footer .side-right .brand a img {
   width: 50px;
 }
 
+footer .side-right .brand a h1 {
+  color: var(--primary-color);
+}
+
 footer .side-right .brand p {
-  color: gray;
   padding: 5px;
 }
 
 footer .side-right .about-us {
-  color: gray;
   padding: 5px 15px;
 }
 
@@ -565,7 +585,7 @@ footer .side-left .phone-number {
 
 footer .side-left .phone-number .title {
   border-bottom: 1px solid var(--border-color);
-  color: var(--primary-color);
+  color: var(--secondary-color);
   font-weight: bold;
 }
 
@@ -578,7 +598,7 @@ footer .side-left .sentence {
 }
 
 footer .side-left .sentence p {
-  border-right: 3px solid var(--primary-color);
+  border-right: 3px solid var(--secondary-color);
   padding: 5px 15px;
 }
 
@@ -591,6 +611,7 @@ footer .side-left .sentence p {
 }
 
 .products .swiper-products .product-card {
+  background-color: var(--bg-soft);
   border: 1px solid var(--border-color);
 }
 
