--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -12,11 +12,10 @@ main {
       margin: 5px 5%;
       .side-1 {
         h3 {
-          color: var(--primary-color);
+          color: var(--secondary-color);
           font-size: 2em;
         }
         p {
-          color: gray;
           padding: 5px;
         }
       }
@@ -32,16 +31,17 @@ main {
   }
   .bestsellers {
     h4 {
-      border-right: 4px solid var(--errors-alerts-color);
+      border-right: 4px solid var(--secondary-color);
       padding: 5px 10px;
       font-size: 1.5em;
     }
   }
   .categories {
     h4 {
-      color: var(--primary-color);
-      font-size: 1.3em;
+      border-right: 4px solid var(--secondary-color);
+      font-size: 1.5em;
       text-align: right;
+      padding: 5px;
     }
     .swiper {
       padding: 15px;
@@ -51,7 +51,7 @@ main {
         .swiper-slide {
           border: none;
           border-radius: 11px;
-          box-shadow: 2px 2px 5px -2px black;
+          box-shadow: 2px 2px 5px -2px var(--shadow-color);
           overflow: hidden;
           a {
             display: flex;
@@ -77,6 +77,7 @@ main {
               z-index: 4;
               padding: 15px;
               h5 {
+                color: white;
                 font-size: 1.5em;
               }
             }
@@ -87,7 +88,7 @@ main {
   }
   .most-visted {
     h4 {
-      border-right: 4px solid var(--errors-alerts-color);
+      border-right: 4px solid var(--secondary-color);
       padding: 5px 10px;
       font-size: 1.5em;
     }
@@ -99,11 +100,7 @@ main {
     padding: 5px 10%;
     .side-right {
       h4 {
-        color: var(--primary-color);
         font-size: 2em;
-      }
-      p {
-        color: gray;
       }
       ul {
         list-style: none;
@@ -113,7 +110,7 @@ main {
           label {
             display: flex;
             justify-content: space-between;
-            border-bottom: 1px solid $border-color;
+            border-bottom: 1px solid var(--border-color);
             padding: 5px;
             cursor: pointer;
             img {
