--- a/public/styles/products.scss
+++ b/public/styles/products.scss
@@ -1,119 +1,119 @@
 $border-color: rgba(0, 0, 0, 0.14);
 
 .main {
-    main {
-        .products-section {
-            .products {
-                h1 {
-                    color: var(--primary-color);
-                    padding: 15px;
-                }
-                .filters-form {
-                  .filters {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    padding: 10px 5%;
-                    div {
-                      select {
-                        background-color: transparent;
-                        border: none;
-                        padding: 5px;
-                        outline: none;
-                        cursor: pointer;
-                        option:focus {
-                          background-color: var(--primary-color);
-                          color: white;
-                        }
-                      }
-                    }
-                  }
-                  .submit {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 10px;
-                    .submit-btn {
-                      background-color: var(--primary-color);
-                      border: none;
-                      border-radius: 11px;
-                      color: white;
-                      width: 20%;
-                      padding: 10px 15px;
-                    }
-                  }
-                }
-                .products-list {
-                    .product-card {
-                        border: 1px solid $border-color;
-                        a {
-                          padding: 10px;
-                          .row-1 {
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            img {
-                              width: 70%;
-                            }
-                          }
-                          .row-2 {
-                            color: rgb(54, 54, 54);
-                            padding: 5px 15px;
-                            .rate {
-                              display: flex;
-                              align-items: center;
-                              justify-content: space-around;
-                              gap: 7px;
-                              border: 1px solid $border-color;
-                              border-radius: 10px;
-                              justify-self: left;
-                              width: fit-content;
-                              padding: 5px;
-                              img {
-                                width: 20px;
-                              }
-                            }
-                            .price {
-                              font-size: 1.3em;
-                              padding: 15px;
-                            }
-                          }
-                        }
-                      }
-                      .product-card:hover {
-                        box-shadow: 2px 2px 5px -2px black;
-                      }
-                }
-                .pagination {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    padding: 15px;
-                    gap: 15px;
-                    a {
-                        background-color: transparent;
-                        border: 1px solid $border-color;
-                        border-radius: 11px;
-                        padding: 5px 10px;
-                    }
-                    a.on {
-                        background-color: var(--primary-color);
-                        color: white;
-                    }
-                    button {
-                        background-color: transparent;
-                        border: none;
-                        outline: none;
-                        cursor: pointer;
-                        padding: 5px;
-                        img {
-                            width: 25px;
-                        }
-                    }
-                }
-            }
+  main {
+    .products-section {
+      .products {
+        h1 {
+          color: var(--secondary-color);
+          padding: 15px;
         }
+        .filters-form {
+          .filters {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 5%;
+            div {
+              select {
+                background-color: transparent;
+                border: none;
+                padding: 5px;
+                outline: none;
+                cursor: pointer;
+                option:focus {
+                  background-color: var(--primary-color);
+                  color: white;
+                }
+              }
+            }
+          }
+          .submit {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            .submit-btn {
+              background-color: var(--secondary-color);
+              border: none;
+              border-radius: 11px;
+              color: white;
+              width: 20%;
+              padding: 10px 15px;
+            }
+          }
+        }
+        .products-list {
+          .product-card {
+            border: 1px solid var(--border-color);
+            a {
+              padding: 10px;
+              .row-1 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                  width: 70%;
+                }
+              }
+              .row-2 {
+                color: rgb(54, 54, 54);
+                padding: 5px 15px;
+                .rate {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-around;
+                  gap: 7px;
+                  border: 1px solid var(--border-color);
+                  border-radius: 10px;
+                  justify-self: left;
+                  width: fit-content;
+                  padding: 5px;
+                  img {
+                    width: 20px;
+                  }
+                }
+                .price {
+                  font-size: 1.3em;
+                  padding: 15px;
+                }
+              }
+            }
+          }
+          .product-card:hover {
+            box-shadow: 2px 2px 5px -2px black;
+          }
+        }
+        .pagination {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 15px;
+          gap: 15px;
+          a {
+            background-color: transparent;
+            border: 1px solid var(--border-color);
+            border-radius: 11px;
+            padding: 5px 10px;
+          }
+          a.on {
+            background-color: var(--primary-color);
+            color: white;
+          }
+          button {
+            background-color: transparent;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 5px;
+            img {
+              width: 25px;
+            }
+          }
+        }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 425px) {
