--- a/public/styles/register.scss
+++ b/public/styles/register.scss
@@ -1,119 +1,119 @@
-$border-color: rgba(0, 0, 0, .14);
+$border-color: rgba(0, 0, 0, 0.14);
 
 body {
-    width: 100vw;
-    height: 100vh;
-    .main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        .box {
-            border: none;
-            border-radius: 10% 15% 20% 15%;
-            box-shadow: 3px 3px 10px -8px;
-            padding: 15px;
-            text-align: center;
-            h1 {
-                color: var(--primary-color);
-            }
-            .brand {
-                border-bottom: 1px solid $border-color;
-                padding: 5px;
-                a {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    img {
-                        width: 50px;
-                    }
-                    h1 {
-                        font-size: 1.2em;
-                    }
-                }
-            }
-            .title {
-                color: var(--primary-color);
-                font-size: 1.7em;
-                padding: 5px;
-            }
-            form {
-                padding: 5px;
-                > {
-                    .inputs {
-                        padding: 5px;
-                        width: 285px;
-                        .input {
-                            border: 1px solid $border-color;
-                            border-radius: 12px 13px 14px 15px;
-                            display: flex;
-                            justify-content: space-between;
-                            align-items: center;
-                            outline: 1px solid transparent;
-                            padding: 5px;
-                            margin: 5px;
-                            transition: all .5s;
-                            img {
-                                width: 20px;
-                            }
-                            input {
-                                border: none;
-                                width: 100%;
-                                outline: none;
-                                padding: 5px;
-                            }
-                            .show-password-btn {
-                                background-color: transparent;
-                                border: none;
-                                padding: 0 5px;
-                                cursor: pointer;
-                            }
-                        }
-                        .input:has(input:focus) {
-                            border-color: var(--secondary-color);
-                            outline-color: var(--primary-color);
-                        }
-                        .field-errors {
-                            li {
-                                color: var(--errors-alerts-color);
-                                font-size: .8em;
-                            }
-                        }
-                    }
-                    button {
-                        background-color: var(--primary-color);
-                        border: none;
-                        border-radius: 11px;
-                        color: white;
-                        cursor: pointer;
-                        padding: 10px 5px;
-                        width: 80%;
-                    }
-                    p {
-                        padding: 5px;
-                    }
-                    a {
-                        padding: 5px;
-                    }
-                }
-            }
+  width: 100vw;
+  height: 100vh;
+  .main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    .box {
+      border: none;
+      border-radius: 10% 15% 20% 15%;
+      box-shadow: 3px 3px 10px -8px;
+      padding: 15px;
+      text-align: center;
+      h1 {
+        color: var(--primary-color);
+      }
+      .brand {
+        border-bottom: 1px solid var(--border-color);
+        padding: 5px;
+        a {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          img {
+            width: 50px;
+          }
+          h1 {
+            font-size: 1.2em;
+          }
         }
+      }
+      .title {
+        font-size: 1.7em;
+        padding: 5px;
+        h5 {
+          color: var(--secondary-color);
+        }
+      }
+      form {
+        padding: 5px;
+        > {
+          .inputs {
+            padding: 5px;
+            width: 285px;
+            .input {
+              border: 1px solid var(--border-color);
+              border-radius: 12px 13px 14px 15px;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              padding: 5px;
+              margin: 5px;
+              transition: all 0.5s;
+              img {
+                width: 20px;
+              }
+              input {
+                border: none;
+                width: 100%;
+                outline: none;
+                padding: 5px;
+              }
+              .show-password-btn {
+                background-color: transparent;
+                border: none;
+                padding: 0 5px;
+                cursor: pointer;
+              }
+            }
+            .input:has(input:focus) {
+              border-color: var(--secondary-color);
+            }
+            .field-errors {
+              li {
+                color: red;
+                font-size: 0.8em;
+              }
+            }
+          }
+          button {
+            background-color: var(--secondary-color);
+            border: none;
+            border-radius: 11px;
+            color: white;
+            cursor: pointer;
+            padding: 10px 5px;
+            width: 80%;
+          }
+          p {
+            padding: 5px;
+          }
+          a {
+            padding: 5px;
+          }
+        }
+      }
     }
+  }
 }
 
 @media screen and (min-width: 1800px) {
-    body {
-        .main {
-            .box {
-                form {
-                    > {
-                        .inputs {
-                            width: 330px;
-                        }
-                    }
-                }
+  body {
+    .main {
+      .box {
+        form {
+          > {
+            .inputs {
+              width: 330px;
             }
+          }
         }
+      }
     }
+  }
 }
