--- a/public/styles/search-results.scss
+++ b/public/styles/search-results.scss
@@ -1,64 +1,63 @@
 $border-color: rgba(0, 0, 0, 0.14);
 
 .main {
-    main {
-        .search-results {
-            padding: 15px 10%;
-            h1 {
-                color: var(--primary-color);
-                font-size: 2em;
-                padding: 10px;
+  main {
+    .search-results {
+      padding: 15px 10%;
+      h1 {
+        font-size: 2em;
+        padding: 10px;
+      }
+      .products {
+        .product {
+          width: 100%;
+          a {
+            display: flex;
+            justify-content: right;
+            align-items: center;
+            border-bottom: 1px solid var(--border-color);
+            color: rgb(54, 54, 54);
+            gap: 15px;
+            .image {
+              img {
+                width: 120px;
+              }
             }
-            .products {
-                .product {
-                    width: 100%;
-                    a {
-                        display: flex;
-                        justify-content: right;
-                        align-items: center;
-                        border-bottom: 1px solid $border-color;
-                        color: rgb(54, 54, 54);
-                        gap: 15px;
-                        .image {
-                            img {
-                                width: 120px;
-                            }
-                        }
-                        .detail {
-                            display: flex;
-                            flex-direction: column;
-                            h5 {
-                                padding: 5px;
-                            }
-                            .rate {
-                                border: 1px solid $border-color;
-                                border-radius: 15px;
-                                display: flex;
-                                justify-content: space-between;
-                                justify-self: left;
-                                padding: 5px 10px;
-                                align-items: center;
-                                width: fit-content;
-                                img {
-                                    width: 25px;
-                                }
-                            }
-                        }
-                    }
+            .detail {
+              display: flex;
+              flex-direction: column;
+              h5 {
+                padding: 5px;
+              }
+              .rate {
+                border: 1px solid var(--border-color);
+                border-radius: 15px;
+                display: flex;
+                justify-content: space-between;
+                justify-self: left;
+                padding: 5px 10px;
+                align-items: center;
+                width: fit-content;
+                img {
+                  width: 25px;
                 }
+              }
             }
+          }
         }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 640px) {
-    .main {
-        main {
-            .products {
-                .product a {
-                    flex-direction: column;
-                }
-            }
+  .main {
+    main {
+      .products {
+        .product a {
+          flex-direction: column;
         }
+      }
     }
+  }
 }
